[tool.poetry]
name = "ml-project"
version = "0.1.0"
description = ""
authors = ["Rafif Alwafi <tmrafifalwafi@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "<2.0"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
catboost = "^1.2.7"
xgboost = "^2.1.3"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"
dill = "^0.3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
